--- a/src/main/resources/com/example/sistema_gerenciamentofx/login-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/login-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -10,9 +11,6 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
-
-<?import com.example.sistema_gerenciamentofx.controller.LoginController?>
 
 <AnchorPane prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.LoginController">
    <children>
@@ -37,8 +35,8 @@
          <right>
             <AnchorPane prefHeight="400.0" prefWidth="300.0" BorderPane.alignment="CENTER">
                <children>
-                  <TextField fx:id="username1" layoutX="49.0" layoutY="163.0" prefHeight="25.0" prefWidth="202.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #404040; -fx-border-width: 0px 0px 2px 0px;" />
-                  <PasswordField fx:id="password1" layoutX="49.0" layoutY="202.0" prefHeight="25.0" prefWidth="202.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #404040; -fx-border-width: 0px 0px 2px 0px;" />
+                  <TextField fx:id="username1" layoutX="49.0" layoutY="163.0" prefHeight="25.0" prefWidth="202.0" promptText="Name" style="-fx-background-color: transparent; -fx-border-color: #404040; -fx-border-width: 0px 0px 2px 0px;" />
+                  <PasswordField fx:id="password1" layoutX="49.0" layoutY="202.0" prefHeight="25.0" prefWidth="202.0" promptText="CPF" style="-fx-background-color: transparent; -fx-border-color: #404040; -fx-border-width: 0px 0px 2px 0px;" />
                   <Button fx:id="loginButton1" layoutX="112.0" layoutY="255.0" mnemonicParsing="false" onAction="#login" prefHeight="32.0" prefWidth="76.0" style="-fx-background-color: #404040; -fx-background-radius: 0px;" text="Login" textFill="WHITE">
                      <cursor>
                         <Cursor fx:constant="OPEN_HAND" />
@@ -49,11 +47,12 @@
                         <Font name="Wingdings 3" size="27.0" />
                      </font>
                   </Text>
-                  <Text fill="#404040" layoutX="65.0" layoutY="313.0" onMouseClicked="#showRegisterStage" strokeType="OUTSIDE" strokeWidth="0.0" text="Don't have an account? Register">
+                  <Text fill="#404040" layoutX="65.0" layoutY="313.0" onMouseClicked="#showRegisterStage" strokeType="OUTSIDE" strokeWidth="0.0" text="Don't have an account?">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Text>
+                  <Hyperlink fx:id="registerLink" layoutX="189.0" layoutY="297.0" text="Register" textFill="#404040" />
                </children>
             </AnchorPane>
          </right>
