--- a/src/main/resources/com/example/sistema_gerenciamentofx/register-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/register-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: fffafa;" stylesheets="@css/styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.RegisterController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #fffafa;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.RegisterController">
    <children>
       <ImageView fitHeight="58.0" fitWidth="94.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -49,7 +49,7 @@
             </Button>
          </children>
       </Pane>
-      <TextField layoutX="14.0" layoutY="151.0" prefHeight="27.0" prefWidth="270.0" style="-fx-border-color: #47077F; -fx-background-insets: fffafa; -fx-border-radius: 20;" styleClass="text-input" />
+      <TextField layoutX="14.0" layoutY="151.0" prefHeight="27.0" prefWidth="270.0" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" />
       <Text fill="#404040" layoutX="23.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" wrappingWidth="117.24869537353516">
          <font>
             <Font name="Calibri Light" size="15.0" />
