--- a/src/main/resources/com/example/sistema_gerenciamentofx/home-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/home-view.fxml
@@ -85,7 +85,7 @@
                   <Insets left="50.0" />
                </padding>
             </Button>
-            <Button fx:id="btnManageReports" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Gerar relatórios">
+            <Button fx:id="btnManageReports" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Gerar relatórios">
                <graphic>
                   <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -97,7 +97,7 @@
                   <Insets left="50.0" />
                </padding>
             </Button>
-            <Button fx:id="btnManageTec" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Gerenciar Técnico">
+            <Button fx:id="btnManageTec" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Gerenciar Técnico">
                <graphic>
                   <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -126,7 +126,7 @@
       <StackPane layoutX="258.0" prefHeight="576.0" prefWidth="793.0" style="-fx-background-color: #02030A;">
          <children>
             <Pane fx:id="pnlManageStock" prefHeight="200.0" prefWidth="200.0" />
-            <Pane fx:id="pnlOrders" prefHeight="200.0" prefWidth="200.0" />
+            <Pane fx:id="pnlManagerClients" prefHeight="200.0" prefWidth="200.0" />
             <Pane fx:id="pnlManageOrders" prefHeight="200.0" prefWidth="200.0" />
             <Pane fx:id="pnlOverview" prefHeight="554.0" prefWidth="793.0" style="-fx-background-color: #fffafa;">
                <children>
@@ -212,7 +212,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <ScrollPane layoutX="14.0" layoutY="232.0" prefHeight="320.0" prefWidth="746.0" stylesheets="@style.css">
+                  <ScrollPane layoutX="14.0" layoutY="232.0" prefHeight="320.0" prefWidth="746.0" stylesheets="@css/styles.css">
                      <content>
                         <VBox fx:id="pnItems" prefHeight="318.0" prefWidth="744.0" spacing="5.0" style="-fx-background-color: #fffafa;">
                            <padding>
@@ -228,6 +228,7 @@
                   </ImageView>
                </children>
             </Pane>
+            <Pane fx:id="pnlManageTec" prefHeight="200.0" prefWidth="200.0" />
          </children>
       </StackPane>
    </children>
