--- a/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
@@ -3,11 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.ClientsController">
    <children>
@@ -118,5 +121,52 @@
             </Button>
          </children>
       </VBox>
+      <TextField fx:id="search_order" layoutX="821.0" layoutY="54.0" prefHeight="27.0" prefWidth="183.0" promptText="Cliente CPF" style="-fx-background-color: #fffafa; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" />
+      <Label layoutX="288.0" layoutY="32.0" text="Clients Manager" textFill="#47077f">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="980.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/icon%20(8).png" />
+         </image>
+      </ImageView>
+      <HBox alignment="CENTER_LEFT" layoutX="276.0" layoutY="175.0" prefHeight="42.0" prefWidth="712.0" spacing="80.0" style="-fx-background-color: #fffafa;">
+         <children>
+            <Label text="Nome Cliente" textFill="#47077f">
+               <HBox.margin>
+                  <Insets left="50.0" />
+               </HBox.margin>
+               <font>
+                  <Font name="Segoe UI Historic" size="12.0" />
+               </font>
+            </Label>
+            <Label text="CPF" textFill="#47077f">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </Label>
+            <Label text="Telefone" textFill="#47077f">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </Label>
+            <Label text="Adress" textFill="#47077f">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </Label>
+         </children>
+      </HBox>
+      <ScrollPane hbarPolicy="NEVER" layoutX="259.0" layoutY="228.0" prefHeight="342.0" prefWidth="784.0" stylesheets="@css/styles.css">
+         <content>
+            <VBox fx:id="pnItems" prefHeight="318.0" prefWidth="744.0" spacing="5.0" style="-fx-background-color: #fffafa;">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </VBox>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
