--- a/src/main/resources/com/example/sistema_gerenciamentofx/home-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/home-view.fxml
@@ -49,7 +49,7 @@
                   <Insets left="50.0" />
                </padding>
             </Button>
-            <Button fx:id="btnManageClients" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Gerenciar Clientes">
+            <Button fx:id="btnManageClients" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#showClientsStage" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Gerenciar Clientes">
                <graphic>
                   <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -212,7 +212,7 @@
                         </Label>
                      </children>
                   </HBox>
-                  <ScrollPane layoutX="14.0" layoutY="232.0" prefHeight="320.0" prefWidth="746.0" stylesheets="@css/styles.css">
+                  <ScrollPane focusTraversable="false" hbarPolicy="NEVER" layoutX="14.0" layoutY="232.0" prefHeight="320.0" prefWidth="746.0" stylesheets="@css/styles.css">
                      <content>
                         <VBox fx:id="pnItems" prefHeight="318.0" prefWidth="744.0" spacing="5.0" style="-fx-background-color: #fffafa;">
                            <padding>
