--- a/src/main/resources/com/example/sistema_gerenciamentofx/login-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/login-view.fxml
@@ -28,7 +28,7 @@
                 <AnchorPane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: fffafa;" BorderPane.alignment="CENTER">
                     <children>
                         <TextField fx:id="username1" layoutX="49.0" layoutY="163.0" prefHeight="25.0" prefWidth="202.0" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #404040; -fx-border-width: 0px 0px 2px 0px;" />
-                        <PasswordField fx:id="password1" layoutX="49.0" layoutY="202.0" prefHeight="25.0" prefWidth="202.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #404040; -fx-border-width: 0px 0px 2px 0px;" />
+                        <PasswordField fx:id="password1" layoutX="49.0" layoutY="202.0" onKeyPressed="#login" prefHeight="25.0" prefWidth="202.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #404040; -fx-border-width: 0px 0px 2px 0px;" />
                         <Button fx:id="loginButton1" layoutX="47.0" layoutY="255.0" mnemonicParsing="false" onAction="#login" prefHeight="32.0" prefWidth="202.0" style="-fx-background-color: #47077F; -fx-background-radius: 10;" text="Login" textFill="WHITE">
                             <cursor>
                                 <Cursor fx:constant="OPEN_HAND" />
