--- a/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
@@ -1,138 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1050.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.ClientsController">
+<Pane fx:id="pnlOverview" prefHeight="554.0" prefWidth="793.0" style="-fx-background-color: #fffafa;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.ClientsController">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="576.0" prefWidth="256.0" style="-fx-background-color: #47077F;">
-         <children>
-            <ImageView fitHeight="92.0" fitWidth="136.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/1.png" />
-               </image>
-               <VBox.margin>
-                  <Insets bottom="10.0" top="50.0" />
-               </VBox.margin>
-            </ImageView>
-            <Label fx:id="techinicianName" textFill="#e7e5e5">
-               <VBox.margin>
-                  <Insets bottom="20.0" />
-               </VBox.margin>
-            </Label>
-            <Button fx:id="btnOverview" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#showHomeStage" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Overview" textFill="#e7e5e5">
-               <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icon%20(4).png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-            </Button>
-            <Button fx:id="btnManageClients" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Gerenciar Clientes">
-               <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icon%20(6).png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-            </Button>
-            <Button fx:id="btnManagerStock" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Gerenciar Estoque">
-               <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icon%20(7).png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-            </Button>
-            <Button fx:id="btnManageOrders" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Ordens de Serviço">
-               <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icon%20(1).png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-            </Button>
-            <Button fx:id="btnManageReports" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Gerar relatórios">
-               <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icon%20(2).png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-            </Button>
-            <Button fx:id="btnManageTec" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Gerenciar Técnico">
-               <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icon%20(10).png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-            </Button>
-            <Button fx:id="btnSignout" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#showLoginStage" prefHeight="42.0" prefWidth="259.0" style="-fx-background-color: #47077F;" stylesheets="@css/styles.css" text="Sign Out">
-               <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/icon%20(9).png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-            </Button>
-         </children>
-      </VBox>
-      <TextField fx:id="search_order" layoutX="821.0" layoutY="54.0" prefHeight="27.0" prefWidth="183.0" promptText="Cliente CPF" style="-fx-background-color: #fffafa; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" />
-      <Label layoutX="288.0" layoutY="32.0" text="Clients Manager" textFill="#47077f">
+      <TextField fx:id="search_order" layoutX="590.0" layoutY="47.0" prefHeight="27.0" prefWidth="183.0" promptText="Cliente CPF" style="-fx-background-color: #fffafa; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" />
+      <Label layoutX="57.0" layoutY="25.0" text="Gerenciar Cliente" textFill="#47077f">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="980.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true">
+      <HBox alignment="CENTER_LEFT" layoutX="66.0" layoutY="96.0" prefHeight="92.0" prefWidth="661.0" spacing="50.0">
+         <children>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" />
+         </children>
+      </HBox>
+      <ScrollPane layoutX="14.0" layoutY="232.0" prefHeight="320.0" prefWidth="746.0" stylesheets="@css/styles.css">
+         <content>
+            <VBox fx:id="pnItems" prefHeight="318.0" prefWidth="744.0" spacing="5.0" style="-fx-background-color: #fffafa;">
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+            </VBox>
+         </content>
+      </ScrollPane>
+      <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="749.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/icon%20(8).png" />
          </image>
       </ImageView>
-      <HBox alignment="CENTER_LEFT" layoutX="276.0" layoutY="175.0" prefHeight="42.0" prefWidth="712.0" spacing="80.0" style="-fx-background-color: #fffafa;">
+      <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="179.0" prefHeight="42.0" prefWidth="712.0" spacing="80.0" style="-fx-background-color: #fffafa;">
          <children>
             <Label text="Nome Cliente" textFill="#47077f">
                <HBox.margin>
@@ -159,14 +65,5 @@
             </Label>
          </children>
       </HBox>
-      <ScrollPane hbarPolicy="NEVER" layoutX="259.0" layoutY="228.0" prefHeight="342.0" prefWidth="784.0" stylesheets="@css/styles.css">
-         <content>
-            <VBox fx:id="pnItems" prefHeight="318.0" prefWidth="744.0" spacing="5.0" style="-fx-background-color: #fffafa;">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-            </VBox>
-         </content>
-      </ScrollPane>
    </children>
-</AnchorPane>
+</Pane>
