--- a/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -13,56 +13,74 @@
 
 <Pane fx:id="pnlOverview" prefHeight="554.0" prefWidth="793.0" style="-fx-background-color: #fffafa;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.ClientsController">
    <children>
-      <TextField fx:id="search_order" layoutX="590.0" layoutY="47.0" prefHeight="27.0" prefWidth="183.0" promptText="Cliente CPF" style="-fx-background-color: #fffafa; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" />
-      <Label layoutX="57.0" layoutY="25.0" text="Gerenciar Cliente" textFill="#47077f">
+      <Label layoutX="14.0" layoutY="14.0" text="Clientes" textFill="#47077f">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <HBox alignment="CENTER_LEFT" layoutX="66.0" layoutY="96.0" prefHeight="92.0" prefWidth="661.0" spacing="50.0">
+      <Pane fx:id="pnlAddClient" layoutX="2.0" layoutY="170.0" prefHeight="389.0" prefWidth="793.0" />
+      <Pane layoutX="1.0" layoutY="165.0" prefHeight="389.0" prefWidth="793.0">
          <children>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" />
+            <ScrollPane layoutX="24.0" layoutY="56.0" prefHeight="320.0" prefWidth="746.0" stylesheets="@css/styles.css">
+               <content>
+                  <VBox fx:id="pnItems" prefHeight="318.0" prefWidth="744.0" spacing="5.0" style="-fx-background-color: #fffafa;">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+               </content>
+            </ScrollPane>
+            <HBox alignment="CENTER_LEFT" layoutX="49.0" layoutY="14.0" prefHeight="42.0" prefWidth="712.0" spacing="80.0" style="-fx-background-color: #fffafa;">
+               <children>
+                  <Label text="Nome Cliente" textFill="#47077f">
+                     <HBox.margin>
+                        <Insets left="50.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font name="Segoe UI Historic" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label text="CPF" textFill="#47077f">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Label>
+                  <Label text="Telefone" textFill="#47077f">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Label>
+                  <Label text="Adress" textFill="#47077f">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
          </children>
-      </HBox>
-      <ScrollPane layoutX="14.0" layoutY="232.0" prefHeight="320.0" prefWidth="746.0" stylesheets="@css/styles.css">
-         <content>
-            <VBox fx:id="pnItems" prefHeight="318.0" prefWidth="744.0" spacing="5.0" style="-fx-background-color: #fffafa;">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-            </VBox>
-         </content>
-      </ScrollPane>
-      <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="749.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
+      </Pane>
+      <ImageView fitHeight="184.0" fitWidth="249.0" layoutX="631.0" layoutY="-43.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@images/icon%20(8).png" />
+            <Image url="@images/5.png" />
          </image>
       </ImageView>
-      <HBox alignment="CENTER_LEFT" layoutX="31.0" layoutY="179.0" prefHeight="42.0" prefWidth="712.0" spacing="80.0" style="-fx-background-color: #fffafa;">
+      <HBox layoutX="44.0" layoutY="65.0" prefHeight="102.0" prefWidth="571.0" spacing="30.0">
          <children>
-            <Label text="Nome Cliente" textFill="#47077f">
-               <HBox.margin>
-                  <Insets left="50.0" />
-               </HBox.margin>
+            <Button fx:id="bttAdd" mnemonicParsing="false" onAction="#login" prefHeight="100.0" prefWidth="161.0" styleClass="button-cadastro" stylesheets="@css/styles.css" text="ADICIONAR">
                <font>
-                  <Font name="Segoe UI Historic" size="12.0" />
+                  <Font name="System Bold" size="15.0" />
                </font>
-            </Label>
-            <Label text="CPF" textFill="#47077f">
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-            </Label>
-            <Label text="Telefone" textFill="#47077f">
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-            </Label>
-            <Label text="Adress" textFill="#47077f">
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
-            </Label>
+            </Button>
+            <Button fx:id="bttAtt" mnemonicParsing="false" prefHeight="100.0" prefWidth="161.0" styleClass="button-cadastro" stylesheets="@css/styles.css" text="ATUALIZAR">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="bttView" mnemonicParsing="false" prefHeight="100.0" prefWidth="161.0" styleClass="button-cadastro" stylesheets="@css/styles.css" text="VISUALIZAR">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
          </children>
       </HBox>
    </children>
