--- a/src/main/resources/com/example/sistema_gerenciamentofx/client-element-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/client-element-view.fxml
@@ -34,12 +34,12 @@
             <Insets />
          </HBox.margin>
       </Label>
-      <Button fx:id="updateClient" mnemonicParsing="false" prefHeight="10.0" prefWidth="60.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="update">
+      <Button fx:id="updateClient" mnemonicParsing="false" onAction="#handleClicks" prefHeight="10.0" prefWidth="60.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="update">
          <HBox.margin>
             <Insets />
          </HBox.margin>
       </Button>
-      <Button fx:id="deleteClient" mnemonicParsing="false" prefHeight="10.0" prefWidth="60.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="delete" />
+      <Button fx:id="deleteClient" mnemonicParsing="false" onAction="#handleClicks" prefHeight="10.0" prefWidth="60.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="delete" />
    </children>
    <effect>
       <DropShadow blurType="GAUSSIAN" height="5.0" radius="2.0" width="5.0" />
