--- a/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
@@ -78,5 +78,6 @@
             </Button>
          </children>
       </HBox>
+      <Pane fx:id="pnlUpdate" layoutY="186.0" prefHeight="389.0" prefWidth="793.0" />
    </children>
 </Pane>
