--- a/src/main/resources/com/example/sistema_gerenciamentofx/update-client-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/update-client-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="389.0" prefWidth="793.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.AddNewClientController">
+<Pane prefHeight="389.0" prefWidth="793.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.UpdateClientController">
    <children>
       <Label layoutX="302.0" layoutY="89.0" text="Atualizar CLiente" textFill="#47077f">
          <font>
