--- a/src/main/resources/com/example/sistema_gerenciamentofx/css/styles.css
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/css/styles.css
@@ -36,7 +36,7 @@
 
 .scroll-bar:horizontal .thumb,
 .scroll-bar:vertical .thumb {
-    -fx-background-color: #10165F;
+    -fx-background-color: #8228D1;
     -fx-background-radius: 5em;
 }
 
